# regexbench

./: CMakeLists.txt
cmake/: Conan.cmake  Doxygen.cmake  StaticAnalyzers.cmake
samples/: medium_chat.csv  small_chat.csv
src/: CMakeLists.txt  boost_regex.hpp  ctre_regex.hpp  main.cpp  pcre_regex.hpp  re2_regex.hpp  std_regex.hpp
